codimd/codimd-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: codimd-service
  namespace: homeautomation
spec:
  selector:
    app: codimd
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
