codimd/codimd-ingress-external.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: codimd-external
  namespace: homeautomation
  labels:
    traffic-type: external
  annotations:
    traefik.frontend.rule.type: PathPrefix
    #traefik.frontend.redirect.entryPoint: https
    #traefik.frontend.redirect.regex: ^http://(.*)
    #traefik.frontend.redirect.replacement: https://$1
    #ingress.kubernetes.io/auth-type: basic
    #ingress.kubernetes.io/auth-secret: ingress-auth
spec:
  rules:
  - host: codimd.cloud.anjokolk.com
    http:
      paths:
      - path: /
        backend:
          serviceName: codimd-service
          servicePort: 3000
  - host: codimd.cloud.oraperf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: codimd-service
          servicePort: 3000
